--- a/starting_kit/html_pages/data.html
+++ b/starting_kit/html_pages/data.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <h1 style="margin: 0.0px 0.0px 16.1px 0.0px; font: 24.0px Times; color: #000000; -webkit-text-stroke: #000000"><span class="s1"><b>Data</b></span></h1>
-<p class="p2"><span class="s1">This uses a dataset built from the data collection of learners' interactions during an 1-hour online course on a general topic. The dataset contains 2 classes, fail or pass, referring to whether a student had the average course grade or more or not.</span></p>
+<p class="p2"><span class="s1">This uses a dataset built from the data collection of learners' information and interactions during a 1-hour online course that is on the topic of the brain and intended for a general audience. The dataset contains 2 classes, fail or pass, referring to whether a student has had the average course grade or more or not.</span></p>
 <p class="p2"><span class="s1">Go to the <b>FILES</b> tab to download the data and the starting kit. The starting kit contains a very small subset of the data for debug purposes. To prepare a challenge submission, you need to use the large dataset that you download separately. For the the large dataset, you do NOT have the labels!<span class="Apple-converted-space"> </span></span></p>
 </body>
 </html>
